fix same answer

--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "node-fetch": "^2.6.1",
     "node-html-scraper": "^1.0.9",
     "prompt-sync": "^4.2.0",
+    "string-similarity": "^4.0.4",
     "table-scraper": "^1.0.3"
   },
   "engines": {
     "node": "16.x",
     "npm": "7.x"
- }
+  }
 }
