--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DISCORD_AUTH_TOKEN=OTg1Nzk5NDI0MTA4MjY5NTY5.GfIL-M.5sfcpRwOaT-LZOAjD3uE-23pdfsen2Ggf3jQOs
+#DISCORD_AUTH_TOKEN=MTA1Njc0MTQ3ODk4ODI1MTI2Ng.Gq2EPA.3ykDNyyRf_RyqT9erLO6v6olGnQ-NREgdqjwhQ
