--- a/configuration.json
+++ b/configuration.json
@@ -1,4 +1,4 @@
 {
   "DISCORD_CLIENT_ID": "985799424108269569",
-  "DISCORD_TESTING_GUILD_ID": 784995120398467082
+  "DISCORD_TESTING_GUILD_ID": "784995120398467082"
 }
