--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "node-html-scraper": "^1.0.9",
     "prompt-sync": "^4.2.0",
     "string-similarity": "^4.0.4",
-    "table-scraper": "^1.0.3"
+    "table-scraper": "^1.0.3",
+    "topgg-autoposter": "^2.0.1"
   },
   "engines": {
     "node": "16.x",
-    "npm": "7.x"
+    "npm": "8.x"
   }
 }
